Restructure vybaveni + add apple, prislusenstvi

--- a/vybaveni/index.html
+++ b/vybaveni/index.html
@@ -14,7 +14,7 @@ media_folder: "assets/page/vybaveni"
     image="laptop.png"
     image-src="https://www.flaticon.com/premium-icon/laptop_2593980"
     title="Můj notebook"
-    description="Můj PC setup  a příslušenství"
+    description="Můj setup  a příslušenství"
     href="/vybaveni/laptop/"
 %}
 
