--- a/vybaveni/index.html
+++ b/vybaveni/index.html
@@ -29,9 +29,9 @@ media_folder: "assets/page/vybaveni"
 {% include vybaveniCard.html
     image="microcontroller.png"
     image-src="https://www.flaticon.com/free-icon/microcontroller_2752878"
-    title="Mikrokontroléry"
-    description="Mikrokontroléry, čipy a programátory"
-    href="/vybaveni/microcontroller/"
+    title="Domácí elektronika"
+    description="Mikrokontroléry, senzory a další elektronické součástky"
+    href="/vybaveni/electro/"
 %}
 
 </div>
